test/mutation_analysis/s0709_to_lower_case/hafis/o3/mutants/2/result.txt
./test/mutation_analysis/s0709_to_lower_case/hafis/o3/mutants/2/Solution.java:17: error: unreachable statement
        for (int i = 0; false; i++) {
                                    ^
1 error
